--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,36 @@ body {
   margin: 0;
 }
 
-.header{
+.nav{
   background-color: #ffffff;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   padding: 22px 30px;
+  height: 70px;
 }
 
-.header > img {
-  width: 82.02px;
+.nav-logo {
+  width: 90px;
+  max-width: 100px;
+}
+
+.hero-wrapper{
+  margin: 0 auto;
+  /* padding: 20px 30px; */
+}
+
+.hero-img{
+  padding: 20px 50px;
+}
+
+.hero-img > img{
+  width: 100%
+}
+
+.hero-text{
+  padding: 10px 36px;
+  font-family: 'Poppins';
+}
+
+.hero-text > p {
+  color: #222222;
 }
