--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,18 @@
 
 body {
   margin: 0;
+  font-family: "Poppins";
 }
 
-.nav{
+.bold {
+  font-weight: bold;
+}
+
+.gray {
+  color: #918e9b;
+}
+
+.nav {
   background-color: #ffffff;
   box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
   padding: 22px 30px;
@@ -18,24 +27,52 @@ body {
   max-width: 100px;
 }
 
-.hero-wrapper{
+section {
   margin: 0 auto;
-  /* padding: 20px 30px; */
+  padding: 10px 30px;
 }
 
-.hero-img{
-  padding: 20px 50px;
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.hero-img > img{
-  width: 100%
+.hero > img {
+  width: 100%;
+  max-width: 600px;
 }
 
-.hero-text{
-  padding: 10px 36px;
-  font-family: 'Poppins';
+.hero > h2 {
+  margin-bottom: 16px;
 }
 
-.hero-text > p {
+.hero-text {
   color: #222222;
+  margin-top: 0;
+}
+
+/* .experiences{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
+
+.card {
+  width: 175px;
+  font-size: 12px;
+}
+
+.card--image {
+  width: 100%;
+  border-radius: 9px;
+}
+
+.card--stats {
+  display: flex;
+  align-items: center;
+}
+
+.card--star {
+  height: 14px;
 }
