--- a/src/App.css
+++ b/src/App.css
@@ -52,20 +52,32 @@ section {
   margin-top: 0;
 }
 
-/* .experiences{
+.experiences {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
 
 .card {
   width: 175px;
+  /* height: 100px; */
   font-size: 12px;
+  flex: 0 0 auto; 
+  display: flex; 
+  flex-direction: column;
+}
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card--image {
   width: 100%;
+  height: 234px;
   border-radius: 9px;
+  margin-bottom: 9px;
 }
 
 .card--stats {
@@ -75,4 +87,8 @@ section {
 
 .card--star {
   height: 14px;
+}
+
+.card--price{
+  margin-top: auto;
 }
