--- a/src/App.css
+++ b/src/App.css
@@ -61,11 +61,11 @@ section {
 
 .card {
   width: 175px;
-  /* height: 100px; */
   font-size: 12px;
   flex: 0 0 auto; 
   display: flex; 
   flex-direction: column;
+  position: relative;
 }
 
 .card--title {
@@ -91,4 +91,14 @@ section {
 
 .card--price{
   margin-top: auto;
+}
+
+.card--badge {
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 4px;
+  font-weight: bold;
 }
