--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@ section {
   max-width: 600px;
 }
 
-.hero > h2 {
+.hero h2 {
   margin-bottom: 16px;
 }
 
@@ -57,6 +57,7 @@ section {
   flex-wrap: nowrap;
   gap: 20px;
   overflow-x: auto;
+  margin-bottom: 20px;
 }
 
 .card {
@@ -101,4 +102,92 @@ section {
   padding: 5px 7px;
   border-radius: 4px;
   font-weight: bold;
+}
+
+/* Responsive breakpoints */
+@media only screen and (min-width: 768px){
+  .nav{
+    padding: 22px 100px;
+  }
+
+  .nav-logo {
+    width: 120px;
+  }
+
+  section {
+    margin: 0 auto;
+    padding: 10px 100px;
+  }
+
+  .hero-text{
+    font-size: 18px;
+  }
+
+  .card{
+    font-size: 14px;
+  }
+}
+
+@media only screen and (min-width: 912px){
+  .nav{
+    padding: 22px 120px;
+  }
+
+  .nav-logo {
+    width: 150px;
+  }
+
+  section {
+    margin: 0 auto;
+    padding: 10px 100px;
+  }
+
+  .experiences{
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 1200px){
+  .nav{
+    padding-left: 220px;
+  }
+
+  .nav-logo {
+    width: 250px;
+  }
+
+  .hero > img {
+    max-width: 750px;
+  }
+
+  .hero h2 {
+    font-size: 30px;
+  }
+  
+  .hero-text {
+    font-size: 20px;
+  }
+
+  .card{
+    width: 250px;
+    font-size: 18px;
+  }
+
+  .card--image {
+    width: 100%;
+    height: 320px;
+  }
+}
+
+@media only screen and (min-width: 1344px){
+  .nav{
+    padding: 25px 0 25px 270px;
+    height: 70px;
+  }
+
+  .nav-logo {
+    max-width: 110px;
+  }
+
 }
